syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "blog/server/pb";

message DeleteSessionsRequest {
    repeated string session_ids = 1;
}

message ListSessionsRequest {
    int32 page_id = 1;
    int32 page_size = 2;
    string order = 3;
    string order_by = 4;
}
message ListSessionsResponse {
    message SessionItem {
        string id = 1;
        string user_agent = 2;
        string client_ip = 3;
        google.protobuf.Timestamp create_at = 4;
        google.protobuf.Timestamp expires_at = 5;
    }
    int64 total = 1;
    repeated SessionItem sessions = 2;
}
